ADD_SUBDIRECTORY(iBatteryMonitor)
ADD_SUBDIRECTORY(iCTDSBE49)
ADD_SUBDIRECTORY(iOS5000)
ADD_SUBDIRECTORY(iPWMController)
ADD_SUBDIRECTORY(iSerialNMEA)
ADD_SUBDIRECTORY(iWinch)
ADD_SUBDIRECTORY(iWinchCtl)
ADD_SUBDIRECTORY(iWinchSim)
ADD_SUBDIRECTORY(lib_anrp_util)
ADD_SUBDIRECTORY(MOOSBlink)
ADD_SUBDIRECTORY(MOOSDump)
ADD_SUBDIRECTORY(MOOSRemote)
ADD_SUBDIRECTORY(pCTDLogger)
ADD_SUBDIRECTORY(pDynamicWaypointLL)
ADD_SUBDIRECTORY(pGPSReTx)
ADD_SUBDIRECTORY(pSamplingControl)
ADD_SUBDIRECTORY(zlog2alog)
ADD_SUBDIRECTORY(zLoggerNG)
ADD_SUBDIRECTORY(iPNICompass)
