ADD_SUBDIRECTORY(iSerialNMEA)
ADD_SUBDIRECTORY(iWebsite)
ADD_SUBDIRECTORY(pAIS2SQL)
ADD_SUBDIRECTORY(pCTDLogger)
ADD_SUBDIRECTORY(pSoundSpeed)
ADD_SUBDIRECTORY(pVirtualTether)
ADD_SUBDIRECTORY(addlatlong)
ADD_SUBDIRECTORY(alog_to_btr)
ADD_SUBDIRECTORY(btr_fix)
ADD_SUBDIRECTORY(modem_csv)
ADD_SUBDIRECTORY(time_fix_alog)

# both these require mysql libraries (libmysqlclient15-dev in ubuntu)
#ADD_SUBDIRECTORY(pAIS2SQL)
#ADD_SUBDIRECTORY(ptsur2sql)
